[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-dorking-automation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.33.1",
    "rich>=15.0.0",
]

[project.scripts]
dork = "GoogleDorking:main"

[tool.setuptools]
py-modules = ["GoogleDorking"]
packages = ["Utils"]
include-package-data = true

[tool.setuptools.package-data]
Utils = ["ListOfDorks.csv"]
